Add GET endpoint
